--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,18 +7,8 @@
         <img src="assets/images/logo.png"alt="luv2shop"class="img-responsive"/>
       </a>
     </div>
-    <div class="menu-sidebar-content js-scrollbar1">
-      <nav class="navbar-sidebar">
-        <ul class="list-unstyled navbar-list">
-          <li>
-            <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
-          </li>
-          <li>
-            <a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <!-- Menu Component -->
+    <app-product-category-menu></app-product-category-menu>
   </aside>
   <!-- END MENU SIDEBAR-->
 
@@ -28,21 +18,11 @@
       <div class="section-content section-content-p30">
         <div class="container-fluid">
           <div class="header-wrap">
-            <form class="form-header" onsubmit="return false;" method="GET">
-              <input
-                class="au-input au-input-xl"
-                type="text"
-                name="search"
-                placeholder="Search for data ..."
-              />
-              <button class="au-btn-submit" type="submit">Search</button>
-            </form>
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span></div>
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
+
+            <app-search></app-search>
+
+            <app-cart-status></app-cart-status>
+
           </div>
           <div class="account-wrap"></div>
         </div>
